# learning-neural-networks

./: CMakeLists.txt  Net.cpp  Net.h  Neuron.cpp  Neuron.h  TrainingData.cpp  TrainingData.h  david_miller.cpp  main.cpp
